[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = "1.40.0"
uuid = { version = "1.11.0", features = ["v4","serde"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"